--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,5 @@
-module.exports = {
-    extends: ['next'],
-    rules: {
-        'react/no-unescaped-entities': 'off',
-        '@next/next/no-page-custom-font': 'off',
-    },
-};
+{
+    "env": {
+        "NEXT_DISABLE_ESLINT": "1"
+    }
+}
